--- a/staff/marti-malek/web-app/package.json
+++ b/staff/marti-malek/web-app/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "isomorphic-fetch": "^2.2.1"
+    "express-session": "^1.15.6",
+    "isomorphic-fetch": "^2.2.1",
+    "session-file-store": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0"
