--- a/staff/marti-malek/spotify-web-app/package.json
+++ b/staff/marti-malek/spotify-web-app/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "4.3.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
