--- a/staff/marti-malek/rest-api/package.json
+++ b/staff/marti-malek/rest-api/package.json
@@ -19,9 +19,12 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.5.0",
+    "mongodb": "^3.1.13",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "expect": "^24.1.0"
   }
 }
